--- a/lecture3/tasks/templates/tasks/add.html
+++ b/lecture3/tasks/templates/tasks/add.html
@@ -2,10 +2,10 @@
 
 {% block body %}
         <h1>Add tasks</h1>
-        <form action="{% url 'tasks:adds' %}" method="post">
+        <form action="{% url 'apptasks:adds' %}" method="post">
             {% csrf_token %}
             {{ form }}
             <input type="submit">
         </form>
-        <a href="{% url 'tasks:index' %}">View tasks</a>
+        <a href="{% url 'apptasks:index' %}">View tasks</a>
 {% endblock %}
