--- a/lecture3/tasks/templates/tasks/index.html
+++ b/lecture3/tasks/templates/tasks/index.html
@@ -5,7 +5,9 @@
         <ul>
             {% for task in tasks %}
                 <li>{{ task }}</li>
+            {% empty %}
+                <li>No task.</li>                
             {% endfor %}
         </ul>
-        <a href="{% url 'tasks:adds' %}">add a new task</a>
+        <a href="{% url 'apptasks:adds' %}">add a new task</a>
 {% endblock %}
